--- a/projeto_smp/package.json
+++ b/projeto_smp/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon ./server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
